[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/cloud01.png" type="Texture" id=1]
[ext_resource path="res://Sprites/cloud03.png" type="Texture" id=2]
[ext_resource path="res://Sprites/cloud02.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Cloud.gd" type="Script" id=4]
[ext_resource path="res://Sprites/cloud04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/cloud05.png" type="Texture" id=6]

[node name="Cloud" type="Node2D"]
script = ExtResource( 4 )

[node name="Cloud1" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 1 )

[node name="Cloud2" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="Cloud3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 2 )

[node name="Cloud4" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 5 )

[node name="Cloud5" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Tween2" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
